tests/valid/shadowing/shadow_unrestricted_param_ok.facet
fn f(x: unrestricted isize) -> unrestricted isize {
    let x: unrestricted isize = 42;
    x
}
