tests/invalid/linear_affine_error/linear_letinfer_not_consumed.facet
fn f(x: linear isize) -> unrestricted () {
  let a = x;
  ()
}
